<resources>
    <string name="app_name">NativeAndroidTest</string>
    <string name="wizard_welcome_msg_a">Thank you for your</string>
    <string name="wizard_welcome_msg_b">confidence in us</string>
    <string name="wizard_button">go to dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="child_first_name">JOHN</string>
    <string name="child_full_name">John Doe</string>
    <string name="age">10 years old</string>
    <string name="dashboard_menu_str">Dashboard</string>
    <string name="phone_usage_menu_str">Phone Usage</string>
    <string name="social_media_menu_str">Social Media</string>
    <string name="alerts_menu_str">Alerts</string>
    <string name="dash_card_title_a">DANGER LEVEL</string>
    <string name="danger_level">HIGH</string>
    <string name="dash_card_title_b">LAST NIGHT&#xA;SLEEP DURATION</string>
    <string name="dash_card_title_c">DEVICE USAGE</string>
    <string name="sleep_duration">8h</string>
    <string name="device_usage">4h</string>
    <string name="phone_call_duration">4h</string>
    <string name="dash_card_title_d">PHONE CALLS DURATION</string>
    <string name="alerts_card_title">Last Alerts</string>
    <string name="toxic_comment">Toxic comment!</string>
    <string name="toxic_comment_desc">Mama always said life was like a box of chocolates. You never know what…</string>
    <string name="toxic_comment_timestamp">12:34 PM</string>
    <string name="sleep_deprivation">Sleep deprivation!</string>
    <string name="sleep_deprivation_desc">Mama always said life was like a box of chocolates. You never know what…</string>
    <string name="sleep_deprivation_timestamp">12:34 PM</string>
    <string name="mental_state_card_title">Sleep duration</string>
    <string name="social_card_title">Last social media activities</string>
    <string name="user_a">Rebbecca Morgan</string>
    <string name="user_b">Justin Holmes</string>
    <string name="parental_control_menu_str">Control</string>
    <string name="head_title">Parental control</string>
    <string name="google_chrome">Google Chrome</string>
    <string name="logo_source">logo_source</string>
    <string name="seg_month">month</string>
    <string name="seg_week">week</string>
    <string name="seg_day">day</string>
    <string name="camera">Camera</string>
</resources>