<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- welcome message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:layout_marginHorizontal="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/wizard_welcome_msg_a"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/wizard_welcome_msg_b"/>
    </LinearLayout>

    <!-- welcome logo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="64dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_source" />

    <!-- navigation button -->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/wizard_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wizard_button"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/primaryColor"
            android:textColor="@color/primaryColor"/>
    </LinearLayout>
</LinearLayout>