<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:paddingTop="32dp"
    android:orientation="vertical"
    tools:context=".fragments.ControlFragment">
        <LinearLayout
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:weightSum="3"
                android:layout_marginBottom="18dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"
                app:tint="@color/white" />
                <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/head_title"/>
                <ImageView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                app:tint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:background="@drawable/cutsom_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableTint="@color/white"
                    android:paddingVertical="8dp"
                    android:paddingStart="4dp"
                    android:drawablePadding="12dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/chrome"
                    android:layout_gravity="center_vertical"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>
                <TextView
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/google_chrome"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/camera"
                    android:layout_gravity="center_vertical"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>
                <TextView
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/camera"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch2"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>
</FrameLayout>